force-app/main/default/objects/Contact/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>Account.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ID</label>
    <type>Text</type>
</CustomField>