force-app/main/default/objects/Contact/fields/AffiliatedCompany__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedCompany__c</fullName>
    <label>所属会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>