force-app/main/default/objects/Contact/fields/Apply__c.field-meta.xml
<CustomField>
    <fullName>Apply__c</fullName>
    <label>適用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>