force-app/main/default/objects/Contact/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>生年月日</label>
    <type>Date</type>
</CustomField>