force-app/main/default/objects/Contact/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>担当者1キャラ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>