force-app/main/default/objects/Contact/fields/CompanyPhoneRanking__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhoneRanking__c</fullName>
    <label>会社TEL順位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>