force-app/main/default/objects/Contact/fields/CompanyStaffCharacteristic__c.field-meta.xml
<CustomField>
    <fullName>CompanyStaffCharacteristic__c</fullName>
    <label>(削除)企業担当者特性</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>