force-app/main/default/objects/Contact/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>取引先担当者</relationshipLabel>
    <relationshipName>CorporateHousingRegulation_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>