force-app/main/default/objects/Contact/fields/CurrentDepartment__c.field-meta.xml
<CustomField>
    <fullName>CurrentDepartment__c</fullName>
    <label>現部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>