force-app/main/default/objects/Contact/fields/del_HomeFax__c.field-meta.xml
<CustomField>
    <fullName>del_HomeFax__c</fullName>
    <label>(削除)自宅FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>