force-app/main/default/objects/Contact/fields/del_TEL__c.field-meta.xml
<CustomField>
    <fullName>del_TEL__c</fullName>
    <label>（不要）TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>