force-app/main/default/objects/Contact/fields/DepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCode__c</fullName>
    <label>所属コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>