force-app/main/default/objects/Contact/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>メール2</label>
    <type>Email</type>
</CustomField>