force-app/main/default/objects/Contact/fields/EmailContactRanking__c.field-meta.xml
<CustomField>
    <fullName>EmailContactRanking__c</fullName>
    <label>メール連絡先順位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>