force-app/main/default/objects/Contact/fields/EmployeeNum__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNum__c</fullName>
    <externalId>true</externalId>
    <label>社員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>