force-app/main/default/objects/Contact/fields/FormerAffiliation_Tel__c.field-meta.xml
<CustomField>
    <fullName>FormerAffiliation_Tel__c</fullName>
    <label>旧所属（TEL）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>