force-app/main/default/objects/Contact/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <label>新所属部課署グループ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>