force-app/main/default/objects/Contact/fields/HeadQuarter__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>本社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>本社</relationshipLabel>
    <relationshipName>ContactHeadQuarter</relationshipName>
    <type>Lookup</type>
</CustomField>