force-app/main/default/objects/Contact/fields/HomeBase__c.field-meta.xml
<CustomField>
    <fullName>HomeBase__c</fullName>
    <label>本拠地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>