force-app/main/default/objects/Contact/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>（重複廃止）自宅TEL</label>
    <type>Phone</type>
</CustomField>