force-app/main/default/objects/Contact/fields/InaugurationDate__c.field-meta.xml
<CustomField>
    <fullName>InaugurationDate__c</fullName>
    <label>(削除)着任日</label>
    <type>Date</type>
</CustomField>