force-app/main/default/objects/Contact/fields/IsNoResident__c.field-meta.xml
<CustomField>
    <fullName>IsNoResident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入居者不在</label>
    <type>Checkbox</type>
</CustomField>