force-app/main/default/objects/Contact/fields/IsPortalUser__c.field-meta.xml
<CustomField>
    <fullName>IsPortalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ポータルユーザ</label>
    <type>Checkbox</type>
</CustomField>