force-app/main/default/objects/Contact/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <formula>Account.IsRemoteAccessEnable__c</formula>
    <label>在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>