force-app/main/default/objects/Contact/fields/IsSpouse__c.field-meta.xml
<CustomField>
    <fullName>IsSpouse__c</fullName>
    <label>配偶者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>