force-app/main/default/objects/Contact/fields/JoinDate__c.field-meta.xml
<CustomField>
    <fullName>JoinDate__c</fullName>
    <label>入社年月日</label>
    <type>Date</type>
</CustomField>