force-app/main/default/objects/Contact/fields/JoinedYearAndMonth__c.field-meta.xml
<CustomField>
    <fullName>JoinedYearAndMonth__c</fullName>
    <label>入社年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>