force-app/main/default/objects/Contact/fields/LoginWhenQuestionAnswer__c.field-meta.xml
<CustomField>
    <fullName>LoginWhenQuestionAnswer__c</fullName>
    <label>ログイン時質問解答</label>
    <length>255</length>
    <type>Text</type>
</CustomField>