force-app/main/default/objects/Contact/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>携帯2</label>
    <type>Phone</type>
</CustomField>