force-app/main/default/objects/Contact/fields/MobileRanking__c.field-meta.xml
<CustomField>
    <fullName>MobileRanking__c</fullName>
    <label>携帯電話順位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>