force-app/main/default/objects/Contact/fields/NewAffiliation__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliation__c</fullName>
    <label>新所属</label>
    <length>255</length>
    <type>Text</type>
</CustomField>