force-app/main/default/objects/Contact/fields/NewAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationName__c</fullName>
    <label>(新)所属名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>