force-app/main/default/objects/Contact/fields/NewAffiliationTel__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationTel__c</fullName>
    <label>新所属TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>