force-app/main/default/objects/Contact/fields/NewDepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>NewDepartmentCode__c</fullName>
    <label>新所属部門コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>