force-app/main/default/objects/Contact/fields/NewDivision__c.field-meta.xml
<CustomField>
    <fullName>NewDivision__c</fullName>
    <label>新所属（課）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>