force-app/main/default/objects/Contact/fields/NewOffice__c.field-meta.xml
<CustomField>
    <fullName>NewOffice__c</fullName>
    <label>新所属（本社・支店）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>