force-app/main/default/objects/Contact/fields/NewOfficeName__c.field-meta.xml
<CustomField>
    <fullName>NewOfficeName__c</fullName>
    <label>新勤務事業所名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>