force-app/main/default/objects/Contact/fields/NewPart__c.field-meta.xml
<CustomField>
    <fullName>NewPart__c</fullName>
    <label>新所属（部）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>