force-app/main/default/objects/Contact/fields/OldDepartment__c.field-meta.xml
<CustomField>
    <fullName>OldDepartment__c</fullName>
    <label>旧所属（部）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>