force-app/main/default/objects/Contact/fields/OldOffice__c.field-meta.xml
<CustomField>
    <fullName>OldOffice__c</fullName>
    <label>旧所属（本社・支店）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>