force-app/main/default/objects/Contact/fields/OtherDestinationCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherDestinationCategory__c</fullName>
    <label>(削除)その他宛先区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>