force-app/main/default/objects/Contact/fields/OtherFax__c.field-meta.xml
<CustomField>
    <fullName>OtherFax__c</fullName>
    <label>(削除)その他FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>