force-app/main/default/objects/Contact/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <label>その他TEL</label>
    <type>Phone</type>
</CustomField>