force-app/main/default/objects/Contact/fields/OtherPriorityRanking__c.field-meta.xml
<CustomField>
    <fullName>OtherPriorityRanking__c</fullName>
    <label>その他優先順位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>