force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>