force-app/main/default/objects/Contact/fields/RetireReson__c.field-meta.xml
<CustomField>
    <fullName>RetireReson__c</fullName>
    <label>退職理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>