force-app/main/default/objects/Contact/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <label>店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>