force-app/main/default/objects/Contact/fields/TransferMemo__c.field-meta.xml
<CustomField>
    <fullName>TransferMemo__c</fullName>
    <label>(削除)移管メモ</label>
    <type>TextArea</type>
</CustomField>