force-app/main/default/objects/Contact/fields/UpdateSourceApplication__c.field-meta.xml
<CustomField>
    <fullName>UpdateSourceApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>情報更新元申請</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>取引先担当者</relationshipLabel>
    <relationshipName>UpdateSourceApplication</relationshipName>
    <type>Lookup</type>
</CustomField>