force-app/main/default/objects/Contact/fields/UpdateSourceApplicationType__c.field-meta.xml
<CustomField>
    <fullName>UpdateSourceApplicationType__c</fullName>
    <formula>UpdateSourceApplication__r.RecordType.Name</formula>
    <label>更新元申請種別</label>
    <type>Text</type>
</CustomField>