force-app/main/default/objects/Contact/fields/WorkDestinationExtension__c.field-meta.xml
<CustomField>
    <fullName>WorkDestinationExtension__c</fullName>
    <label>勤務先内線</label>
    <type>Phone</type>
</CustomField>