force-app/main/default/objects/Contact/fields/WorkDestinationFax__c.field-meta.xml
<CustomField>
    <fullName>WorkDestinationFax__c</fullName>
    <label>勤務先FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>