force-app/main/default/objects/Contact/recordTypes/CompanyEmployee.recordType-meta.xml
<RecordType>
    <fullName>CompanyEmployee</fullName>
    <active>true</active>
    <label>企業社員</label>
</RecordType>