force-app/main/default/objects/Contact/recordTypes/CompanyStaff.recordType-meta.xml
<RecordType>
    <fullName>CompanyStaff</fullName>
    <active>true</active>
    <label>社宅担当者</label>
</RecordType>