force-app/main/default/objects/Contact/recordTypes/RealEstateAgency.recordType-meta.xml
<RecordType>
    <fullName>RealEstateAgency</fullName>
    <active>true</active>
    <label>不動産仲介会社</label>
</RecordType>