force-app/main/default/objects/Contact/recordTypes/RealEstateManagement.recordType-meta.xml
<RecordType>
    <fullName>RealEstateManagement</fullName>
    <active>true</active>
    <label>不動産管理会社</label>
</RecordType>