force-app/main/default/objects/Contact/listViews/InHouseAccountManager.listView-meta.xml
<ListView>
    <fullName>InHouseAccountManager</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewManager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>社員</label>
</ListView>