force-app/main/default/objects/Contact/listViews/InHouseContact.listView-meta.xml
<ListView>
    <fullName>InHouseContact</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RetireDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>自社の取引先担当者(不動産会社)</label>
</ListView>